# Flora-data-pipeline

./: .env.example  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: config.py  log_config.py  main.py  models.py
backend/routers/: enrich.py  export.py  flowers.py  scrape.py
backend/services/: observability.py  tracing.py
backend/services/embeddings/: ollama.py  openai.py  provider.py
backend/services/images/: wikimedia.py
backend/services/llm/: _token_counter.py  gemini.py  groq.py  ollama.py  provider.py  together.py
backend/services/rag/: chunker.py  embedder.py  extractor.py  fact_checker.py  grader.py  judge.py  query_gen.py  retriever.py  router.py  synthesizer.py  verifier.py
backend/services/scraper/: orchestrator.py  web_search.py
backend/services/translation/: translator.py
backend/tasks/: pipeline.py
data/: demo_flowers.txt  past_flowers.csv
frontend/: Dockerfile
frontend/src/app/flowers/[latin]/: page.tsx
frontend/src/lib/: api.ts
observability/: prometheus.yml  tempo.yaml
observability/grafana/dashboards/: flora-pipeline.json
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/grafana/provisioning/datasources/: datasources.yaml
scripts/: run_all.py
tests/: test_chunker.py  test_confidence_and_images.py  test_integration.py  test_judge.py  test_router.py  test_rrf.py  test_web_search.py
